Bug 72996 - weston-editor entry fields do not respond to touch
Summary: weston-editor entry fields do not respond to touch
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-23 19:24 UTC by Anu Reddy
Modified: 2014-01-08 22:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2013-12-23 19:24:46 UTC
Steps:

1.	On a touch display launch Weston : weston-launch
2.	Launch Weston terminal : weston-terminal
3.	Run editor : Weston-editor
4.	Touch on “Entry” to launch virtual Keyboard. Virtual keyboard should launch for user entries. 
5.	Touch on “ Numeric” to launch numeric virtual keyboard. Numeric virtual keyboard should launch for user entries.


Actual Result :
Weston cannot launch VKB on weston-editor using touch for touch entries. VKB can be launched on Weston-editor using mouse for touch entries. 


Expected result:
On weston editor, touch should launch VKB for touch entries.

Environment :
Kernel:3.9.5-301.fc19.x86_64
wayland (HEAD) 1.3.91-0-g01bde63
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g6f7da01
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/master-0-gdf42a80
efl (HEAD) remotes/origin/efl-1.8-0-g90c2320
elementary (HEAD) remotes/origin/elementary-1.8-0-ge077db6
wayland-fits (HEAD) remotes/origin/HEAD-0-gcd75d94
Comment 1 Kristian Høgsberg 2014-01-02 02:15:02 UTC
I can't reproduce this.  Does touch work in general?  Does weston-simple-touch work?
Comment 2 Anu Reddy 2014-01-03 08:55:46 UTC
I am unable to focus/move cursor on ‘entry’ field by touching on entry field. I can focus entry using mouse.

Simple-touch is not working consistently. https://bugs.freedesktop.org/show_bug.cgi?id=72841
Comment 3 U. Artie Eoff 2014-01-07 00:38:26 UTC
I think what is being described here is that the text entry fields don't receive focus when touching them, and the vkb doesn't launch as a result.
Comment 4 Kristian Høgsberg 2014-01-07 19:55:13 UTC
commit 966e3ed24770ebe3da9d88907cd404ab61b90fb7
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Jan 7 10:41:50 2014 -0800

    editor: Add missing touch-to-activate for the entries
    
    Closes: https://bugs.freedesktop.org/show_bug.cgi?id=72996


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.