editor: Add missing touch-to-activate for the entries

Closes: https://bugs.freedesktop.org/show_bug.cgi?id=72996